FOF 3.0.8
================================================================================
+ gh-584 removeHeader method added in Form, allowing you to remove a header from an XML form.
# [HIGH] FOF30\Update\Joomla could not detect Joomla! updates due to changes in Joomla! XML update sources
# [HIGH] Assets tracking was broken due to wrong use of in_array instead of array_key_exists
# [HIGH] The access model state was always filled with the default access level, making it impossible to filter by viewing access level.

FOF 3.0.7
================================================================================
# [HIGH] The caching ID was always wrong since JCache::makeId() is never called any more in Joomla!.

FOF 3.0.6
================================================================================
+ gh-579 Title field, added slug_separator attribute

FOF 3.0.5
================================================================================
~ No change to 3.0.4. I'm trying to get Packagist to work.

FOF 3.0.4
================================================================================
# [HIGH] If you declared onBefore/onAfter Controller methods public FOF would erroneously treat them as tasks

FOF 3.0.3
================================================================================
+ gh-572 Allow to translate toolbar title in fof.xml
+ gh-570 Pass the form to child, needed for parseFieldTags
+ gh-565 Fine grained caching control for controller tasks
~ InstallScript: use is_file / is_dir instead of JFile/JFolder
# [MEDIUM] gh-571 $rowId is not a monotonically increasing ID
# [HIGH] push() does not save relations of new items

FOF 3.0.2
================================================================================
~ Clear the OPcache when installing / updaing an extension as long as it uses Installscript
~ You can now use a folder called ViewTemplate in your extension to hold your view templates